<resources>
    <string name="app_name">PTGallery</string>

    <string name="str_photo">Photo</string>
    <string name="str_album">Album</string>

    <!-- 字体 -->
    <string name="font_family_black">sans-serif-black</string>
    <string name="font_family_medium">sans-serif-medium</string>
    <string name="font_family_bold">sans-serif-bold</string>

    <!-- permission -->
    <string name="str_unauthorized_external_storage">Unauthorized external storage, Application can\'t mormal use</string>

    <!-- photo preview -->
    <string name="str_photo_perview_header_function">Edit</string>

    <!-- Dialog -->
    <string name="str_ok">Ok</string>
    <string name="str_cancel">Cancel</string>

    <!-- tips -->
    <string name="str_tips_auth_permission_error">Permission error</string>
    <string name="str_tips_auth_permission_error_read_storage">App not authorized. Please grant access at \ "Settings > Other Settings > Applications Manager > Photo > Permissions > Storage space \". Otherwise the program can not run properly!</string>
    <string name="str_tips_please_select">Please select</string>

    <!-- media fodler -->
    <string name="str_folder_name_camera">Camera</string>
    <string name="str_folder_name_video">Video</string>
    <string name="str_folder_name_screenshots">Screenshots</string>
    <string name="str_folder_name_download">Download</string>
    <string name="str_folder_name_other">Other</string>


    <!-- media info -->
    <string name="str_media_detail">Detail</string>
    <string name="str_media_name">&#160;&#160;&#160;&#160;File name:&lt;b>%ls&lt;/b></string>
    <string name="str_media_path">&#160;&#160;&#160;&#160;File path:</string>
    <string name="str_media_size">&#160;&#160;&#160;&#160;File size:&lt;b>%1s&lt;/b></string>
    <string name="str_media_memory_size">&#160;&#160;&#160;&#160;Memory size:&lt;b>%1s&lt;/b></string>
    <string name="str_media_mime_type">&#160;&#160;&#160;&#160;MimeType:&lt;b>%1s&lt;/b></string>
    <string name="str_media_date_taken">&#160;&#160;&#160;&#160;Create date:&lt;b>%1s&lt;/b></string>
    <string name="str_media_buckete_display_name">&#160;&#160;&#160;&#160;Directory:&lt;b>%1s&lt;/b></string>
</resources>
